# xml-converter-exercise

./: .gitignore  Dockerfile  Makefile  README.md  README_CHALLENGE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml
exercise/: settings.py  urls.py
templates/: invalid_file_page.html  upload_page.html
xml_converter/: forms.py  serializers.py  tests.py  viewsets.py  xml_parser.py
