[tool.poetry]
name = "xml-converter-exercise"
version = "0.1.0"
description = ""
authors = ["Wesley Mendes <wesley_gto_x@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
python-decouple = "^3.6"
views = "^0.3"
Markdown = "^3.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-flake8 = "^1.1.1"
requests = "^2.28.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
